--- a/Card2018/main.css
+++ b/Card2018/main.css
@@ -10,6 +10,6 @@
 		margin: 0px;
 		background-position-x: center;
 		background-repeat: no-repeat;
-		background-size: contain;
+		background-size: cover;
 	}
 }
